--- a/css/base/base.css
+++ b/css/base/base.css
@@ -1,10 +1,22 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    height: 100vh;
+}
+
 body {
+    height: 100%;
     background-color: var(--bg1);
     color: #eee;
     overflow-x: hidden;
 }
 
 header {
+    width: 100%;
     background-color: var(--bg2);
     color: aliceblue;
     padding: 0.3em;
