--- a/css/cmps/locs.css
+++ b/css/cmps/locs.css
@@ -1,7 +1,9 @@
 .locs-container {
     background-color: var(--bg3);
     padding: 0.5em;
-    min-height: 100vh;
+    padding-bottom: 20%;
+    width: 100vw;
+    
 }
 
 .loc-list {
@@ -32,7 +34,7 @@
 
 .map {
     width: 100%;
-    height: 100vh;
+    height: 85vh;
 }
 
 .form-search {
@@ -62,23 +64,54 @@
 }
 
 .pie {
-    display: inline-block;
-    width: 120px;
-    height: 120px;
+    display: flex;
+    width: 50%;
+    aspect-ratio: 1;
     border-radius: 50%;
+    flex-shrink: 1;
+    align-self: center;
     /* background-image: conic-gradient(orange 0%, orange 64%, blue 64%, blue 81%, black 81%, black 100%); */
 }
 
 .loc-stats ul {
     list-style-type: none;
-    display: inline-block;
+    display: flex;
     text-transform: capitalize;
+    
 }
 
 .loc-stats .pie-label {
-    display: inline-block;
+    display: flex;
     background-color: black;
     width: 1em;
     height: 1em;
     margin-inline-end: 0.3em;
+    
+}
+
+.loc-stats{
+    display: flex;
+    padding-top: 10%;
+    aspect-ratio: 2;
+    max-width: 100%;
+    flex-basis: auto;
+    flex-direction: row;
+}
+
+.loc-stats>*{
+    display: flex;
+    flex-direction: column;
+    gap: 5%;
+    width: 100%;
+}
+
+.side-bar{
+    display: flex;
+    gap: 10%;
+    max-width: 100%;
+    flex-basis: auto;
+}
+
+.legend>*{
+    padding: 10px;
 }
