--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,45 @@
 @import url(cmps/locs.css);
 @import url(cmps/selected-loc.css);
 
+
+
 @media (min-width: 750px) {
     main {
         display: flex;
         flex-direction: row-reverse;
     }
+
     .locs-container {
         width: 30vw;
     }
+
+    .pie {
+        display: inline-block;
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        /* background-image: conic-gradient(orange 0%, orange 64%, blue 64%, blue 81%, black 81%, black 100%); */
+    }
+
+    .loc-stats ul {
+        list-style-type: none;
+        display: inline-block;
+        text-transform: capitalize;
+    }
+
+    .loc-stats .pie-label {
+        display: inline-block;
+        background-color: black;
+        width: 1em;
+        height: 1em;
+        margin-inline-end: 0.3em;
+    }
+    @media (max-width: 1000px){
+        .pie {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        }
+}
 }
 
