--- a/css/base/base.css
+++ b/css/base/base.css
@@ -37,7 +37,7 @@ button {
     border: 0;
     border-radius: .2em;
     background-color: #222;
-    padding: 6px 10px;
+    padding: 2px 10px;
     margin: 2px;
     cursor: pointer;
     transition: background-color .5s;
@@ -57,3 +57,6 @@ button:hover {
     font-size: .8em;
 }
 
+h2{
+    font-size: large;
+}
