--- a/css/base/base.css
+++ b/css/base/base.css
@@ -2,6 +2,7 @@ body {
     background-color: var(--bg1);
     color: #eee;
     overflow-x: hidden;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 header {
@@ -45,3 +46,6 @@ button:hover {
     font-size: .8em;
 }
 
+.hide{
+    display: none;
+}
